fix: Fix left padding on restaurants list on Safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,7 @@ nav h1 {
   list-style: outside none none;
   margin: 0;
 	padding-inline-start: 0;
+	padding-left: 0;
 	margin-block-start: 0;
 	margin-block-end: 0;
 	display: grid;
